# Fin-ai

./: README.md  index.html  metadata.json
backend/: main.py  pyproject.toml
src/: App.tsx  constants.ts  index.css  types.ts
src/components/: AnalysisDashboard.tsx  AnalysisLoading.tsx  AnalysisReport.tsx  ObservationsView.tsx  UploadCenter.tsx
src/components/layout/: Navbar.tsx  Sidebar.tsx
src/lib/: utils.ts
src/services/: api.ts
